# Topo

./: .gitignore  CMakeLists.txt  FastNoiseLite.h  Makefile  README.md  app_state.h  basalt.cpp  basalt.h  config.h  config.json  contour.cpp  contour.h  crystal.cpp  crystal.h  delve_render.cpp  delve_render.h  detail.cpp  detail.h  flood_fill.h  gpu.cpp  gpu.h  hex.cpp  hex.h  imgui  imgui.ini  imgui_ui.cpp  imgui_ui.h  isometric.cpp  isometric.h  lava.cpp  lava.h  main.cpp  map_gen.cpp  map_gen.h  noise.cpp  noise.h  palettes.h  plan.md  plateau.cpp  plateau.h  (+10 more)
game/: camera.cpp  camera.h  game.cpp  game.h  input.cpp  input.h  render_system.cpp  render_system.h  scene.h  sprite.cpp  sprite.h
shaders/: background.frag.glsl.spv  background.vert.glsl.spv  contour.frag.glsl.spv  contour.vert.glsl.spv  generate_clusters.comp.glsl.spv  lava.vert.glsl.spv  light_culling.comp.glsl.spv  terrain.frag.glsl.spv  terrain.vert.glsl.spv
src/: topo_index.md
src/engine/: app.cpp  app.h
src/engine/camera/: camera.cpp  camera.h
src/engine/core/: asset_manager.cpp  asset_manager.h  debug.h  task_system.cpp  task_system.h  types.h
src/engine/gpu/: gpu.cpp  gpu.h
src/engine/input/: input.cpp  input.h
src/engine/render/: background.cpp  background.h  render_system.cpp  render_system.h  sprite.cpp  sprite.h
src/engine/scene/: scene_manager.h
src/engine/ui/: imgui_ui.cpp  imgui_ui.h
src/game/: app_state.h  config.h  game_state.h  main.cpp  topo_game.cpp  topo_game.h
src/game/scenes/: game_scene.cpp  game_scene.h  menu_scene.cpp  menu_scene.h  pause_scene.cpp  pause_scene.h
src/game/terrain/: FastNoiseLite.h  basalt.cpp  basalt.h  color.h  contour.cpp  contour.h  delve_render.cpp  delve_render.h  detail.cpp  detail.h  hex.cpp  hex.h  isometric.cpp  isometric.h  lava.cpp  lava.h  map_data.h  map_gen.cpp  map_gen.h  noise.cpp  noise_cache.h  noise_composer.cpp  noise_composer.h  noise_layers.cpp  noise_layers.h  palettes.h  terrain_generator.cpp  terrain_generator.h  terrain_mesh.cpp  terrain_mesh.h  terrain_renderer.cpp  terrain_renderer.h  util.h
src/shaders/: background.frag.glsl  background.vert.glsl  common.glsl  contour.frag.glsl  contour.vert.glsl  coord.glsl  generate_clusters.comp.glsl  lava.vert.glsl  light_culling.comp.glsl  lighting_common.glsl  terrain.frag.glsl  terrain.vert.glsl
